Updated README with installation and execution instructions, added example input and application functionality details.